--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "@types/react-beautiful-dnd": "^13.1.8",
     "firebase": "^11.2.0",
     "framer-motion": "^12.0.5",
