--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dropzone": "^14.3.5",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-photo-sphere-viewer": "^6.0.1",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
