--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "@types/react-beautiful-dnd": "^13.1.8",
     "firebase": "^11.2.0",
+    "formidable": "^3.5.2",
     "framer-motion": "^12.0.5",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
