--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@tensorflow-models/coco-ssd": "^2.2.3",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-backend-webgl": "^4.22.0",
+    "@types/next": "^8.0.7",
     "@types/react-beautiful-dnd": "^13.1.8",
     "firebase": "^11.2.0",
     "formidable": "^3.5.2",
     "framer-motion": "^12.0.5",
+    "next": "^15.1.6",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
