--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,20 @@
 {
-  "version": 2,
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
   "builds": [
     {
-      "src": "api/index.py",
+      "src": "app/app.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "api/index.py"
+      "src": "/api/(.*)",
+      "dest": "app/app.py"
     }
   ]
 }
